# LexiScan

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  se.danielnylander.lexiscan.desktop  setup.py
data/: com.github.lexiscan.desktop  style.css
lexiscan/: __init__.py  __main__.py  application.py  i18n.py  window.py
lexiscan/clipboard/: monitor.py
lexiscan/hotkeys/: listener.py
lexiscan/lookup/: aggregator.py  arasaac.py  base.py  freedict.py  lexin.py
lexiscan/models/: result.py
lexiscan/ui/: definition_view.py  image_view.py  phonetic_view.py  translation_view.py
lexiscan/utils/: audio.py  cache.py  i18n.py
po/: POTFILES.in  en.po  lexiscan.pot  sv.mo  sv.po
