[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "lexiscan"
version = "1.0.0"
description = "System-wide popup dictionary with Swedish-English support"
requires-python = ">=3.9"
license = "GPL-3.0"

[tool.setuptools.packages.find]
include = ["lexiscan*"]
